New folder structure

--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@
         <link href="css/mdb.min.css" rel="stylesheet">
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
-        <link href="gallery.css" rel="stylesheet">
+        <link href="css/gallery.css" rel="stylesheet">
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="C.png" />
+        <link rel ="icon" type="image/png" href="img/C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
@@ -115,7 +115,7 @@
                         <!--Grid column-->
                         <div class="col-md-6 mb-4">
 
-                            <img src="myself.jpg" class="img-fluid z-depth-1-half" alt="">
+                            <img src="img/myself.jpg" class="img-fluid z-depth-1-half" alt="">
 
                         </div>
                         <!--Grid column-->
@@ -257,7 +257,7 @@
                         <div style="height:30px"></div>
                         <!--Second column-->
                         <div class="col-md-4 flex-center">
-                            <img src="graduated.jpg" alt="Me" class="z-depth-0 img-fluid">
+                            <img src="img/graduated.jpg" alt="Me" class="z-depth-0 img-fluid">
                         </div>
                         <!--/Second column-->
 
