--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
          <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="C.png" />
+        <link rel ="icon" type="image/png" href="img/C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
