--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="C.png" />
+        <link rel ="icon" type="image/png" href="img/C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
@@ -25,7 +25,7 @@
                 }
             }
         </style>
-        <link href="home.css" rel="stylesheet">
+        <link href="css/home.css" rel="stylesheet">
     </head>
 
     <body>
@@ -111,7 +111,7 @@
                     <!-- Heading & Description -->
                     <div class="wow fadeIn" id="welcome-div">
 
-                        <img src="welcome.jpg" class="welcome-image">
+                        <img src="img/welcome.jpg" class="welcome-image">
 
                         <div class="center">
                             <!--Section description-->
@@ -127,7 +127,7 @@
 
                         <!--Grid column-->
                         <div class="col-lg-5 col-xl-4 mb-4">
-                            <img src="myself.jpg" class="img-fluid" alt="">
+                            <img src="img/myself.jpg" class="img-fluid" alt="">
                             <a href="about.html" target="_blank">
                             </a>
                         </div>
@@ -158,7 +158,7 @@
                         <!--Grid column-->
                         <div class="col-lg-5 col-xl-4 mb-4">
                             <!--Featured image-->
-                            <img src="buffon.jpg" class="img-fluid" alt="">
+                            <img src="img/buffon.jpg" class="img-fluid" alt="">
                             <a href="about.html">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
@@ -192,7 +192,7 @@
                         <!--Grid column-->
                         <div class="col-lg-5 col-xl-4 mb-4">
                             <!--Featured image-->
-                            <img  src="beatles.jpeg" class="img-fluid" alt="">
+                            <img  src="img/beatles.jpeg" class="img-fluid" alt="">
                         </div>
                         <!--Grid column-->
 
@@ -221,7 +221,7 @@
                         <!--Grid column-->
                         <div class="col-lg-5 col-xl-4 mb-4">
                             <!--Featured image-->
-                            <img src="calculator.png" class="img-fluid" alt="">
+                            <img src="img/calculator.png" class="img-fluid" alt="">
                             <a href="about.html">
                                 <div class="mask rgba-white-slight"></div>
                             </a>
