--- a/complex.html
+++ b/complex.html
@@ -17,7 +17,7 @@
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="C.png" />
+        <link rel ="icon" type="image/png" href="img/C.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
@@ -25,7 +25,7 @@
                 }
             }
         </style>
-        <link href="complex.css" rel="stylesheet">
+        <link href="css/complex.css" rel="stylesheet">
     </head>
 
     <body>
@@ -304,7 +304,7 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="js/mdb.min.js"></script>
         <!-- Complex js script -->
-        <script type="text/javascript" src="complex.js"></script>
+        <script type="text/javascript" src="js/complex.js"></script>
         <!-- Initializations -->
         <script type="text/javascript">
             // Animations initialization
