--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
         <!-- My own stylesheet -->
-        <link href="landing.css" rel="stylesheet">
+        <link href="css/landing.css" rel="stylesheet">
         
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="C.png" />
+        <link rel ="icon" type="image/png" href="img/C.png" />
     </head>
     <body>
         <header class="startup text-center text-white d-flex">
