--- a/complex.html
+++ b/complex.html
@@ -255,7 +255,17 @@
 
             <hr class="my-4">
 
-           <!-- Social icons -->
+            <!--Contact-->
+            <div class="pt-4">
+                <h4>Contact me:</h4><br>
+                <h5>+58(414)407-7735</h5><br>
+                <h5>devcarlosshb98@gmail.com</h5>
+            </div>
+            <!--/Contact-->
+
+            <hr class="my-4">
+
+            <!-- Social icons -->
             <div class="pb-4">
                 <h5>Follow me </h5>
 
