--- a/favorite.html
+++ b/favorite.html
@@ -25,7 +25,7 @@
                 }
             }
         </style>
-        <link href="gallery.css" rel="stylesheet">
+        <link href="css/gallery.css" rel="stylesheet">
 
     </head>
 
@@ -161,7 +161,17 @@
             </div>
             <!--/.Call to action-->
 
-             <hr class="my-4">
+            <hr class="my-4">
+
+            <!--Contact-->
+            <div class="pt-4">
+                <h4>Contact me:</h4><br>
+                <h5>+58(414)407-7735</h5><br>
+                <h5>devcarlosshb98@gmail.com</h5>
+            </div>
+            <!--/Contact-->
+
+            <hr class="my-4">
 
             <!-- Social icons -->
             <div class="pb-4">
