--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
                 }
             }
         </style>
-        <link href="gallery.css" rel="stylesheet">
+        <link href="css/gallery.css" rel="stylesheet">
     </head>
     <body>
         <!-- Navbar -->
@@ -122,6 +122,16 @@
                 <h2>“Without music, life would be a mistake” ― Friedrich Nietzsche.</h2>
             </div>
             <!--/.Call to action-->
+
+            <hr class="my-4">
+
+            <!--Contact-->
+            <div class="pt-4">
+                <h4>Contact me:</h4><br>
+                <h5>+58(414)407-7735</h5><br>
+                <h5>devcarlosshb98@gmail.com</h5>
+            </div>
+            <!--/Contact-->
 
             <hr class="my-4">
 
