--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="css/landing.css" rel="stylesheet">
         
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="img/C.png" />
+        <link rel ="icon" type="image/png" href="img/myAvatar.png" />
     </head>
     <body>
         <header class="startup text-center text-white d-flex">
