--- a/complex.html
+++ b/complex.html
@@ -17,7 +17,7 @@
         <!-- Your custom styles (optional) -->
         <link href="css/style.min.css" rel="stylesheet">
         <!-- Icon -->
-        <link rel ="icon" type="image/png" href="img/C.png" />
+        <link rel ="icon" type="image/png" href="img/myAvatar.png" />
         <style type="text/css">
             @media (min-width: 800px) and (max-width: 850px) {
                 .navbar:not(.top-nav-collapse) {
