--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 
                     </ul>
 
-                    <!-- Right -->
+                     <!-- Right -->
                     <ul class="navbar-nav nav-flex-icons">
                         <li class="nav-item">
                             <a href="https://www.facebook.com/TheCarlosSamuel" class="nav-link" target="_blank">
@@ -83,7 +83,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://twitter.com/OneMoreCarlos" class="nav-link" target="_blank">
+                            <a href="https://twitter.com/Carlosshb13" class="nav-link" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
@@ -668,7 +668,7 @@
         </main>
         <!--Main layout-->
 
-        <!--Footer-->
+         <!--Footer-->
         <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
             <!--Call to action-->
@@ -697,7 +697,7 @@
                     <i class="fa fa-facebook mr-3"></i>
                 </a>
 
-                <a href="https://twitter.com/OneMoreCarlos" target="_blank">
+                <a href="https://twitter.com/Carlosshb13" target="_blank">
                     <i class="fa fa-twitter mr-3"></i>
                 </a>
 
@@ -712,7 +712,7 @@
                 <a href="https://github.com/Carls13" target="_blank">
                     <i class="fa fa-github mr-3"></i>
                 </a>
-                <a href="https://www.instagram.com/carlosshb98/" target="_blank">
+                <a href="https://www.instagram.com/devcshb/" target="_blank">
                     <i class="fa fa-instagram mr-3"></i>
                 </a>
 
@@ -721,7 +721,7 @@
 
             <!--Copyright-->
             <div class="footer-copyright py-3">
-                © 2018 Copyright: Carlos Hernández, Venezuela.                 
+                © 2019 Copyright: Carlos Hernández, Venezuela.                 
             </div>
             <!--/.Copyright-->
 
