--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://twitter.com/OneMoreCarlos" class="nav-link" target="_blank">
+                            <a href="https://twitter.com/Carlosshb13" class="nav-link" target="_blank">
                                 <i class="fa fa-twitter"></i>
                             </a>
                         </li>
@@ -284,7 +284,7 @@
                     <i class="fa fa-facebook mr-3"></i>
                 </a>
 
-                <a href="https://twitter.com/OneMoreCarlos" target="_blank">
+                <a href="https://twitter.com/Carlosshb13" target="_blank">
                     <i class="fa fa-twitter mr-3"></i>
                 </a>
 
@@ -299,7 +299,7 @@
                 <a href="https://github.com/Carls13" target="_blank">
                     <i class="fa fa-github mr-3"></i>
                 </a>
-                <a href="https://www.instagram.com/carlosshb98/" target="_blank">
+                <a href="https://www.instagram.com/devcshb/" target="_blank">
                     <i class="fa fa-instagram mr-3"></i>
                 </a>
 
@@ -308,7 +308,7 @@
 
             <!--Copyright-->
             <div class="footer-copyright py-3">
-                © 2018 Copyright: Carlos Hernández, Venezuela.                 
+                © 2019 Copyright: Carlos Hernández, Venezuela.                 
             </div>
             <!--/.Copyright-->
 
